# SCE-Solver

./: README.md
results/: evaluation.py
sce-solver/: Cargo.toml  build.rs  config.txt  run_all.sh
sce-solver/lib/: README.md  find_min_cut.h
sce-solver/lib/algorithms/flow/: excess_scaling.h  push_relabel.h  unit_flow.h
sce-solver/lib/algorithms/global_mincut/: ks_minimum_cut.h  minimum_cut.h  minimum_cut_helpers.h  padberg_rinaldi.h  viecut.h
sce-solver/lib/algorithms/global_mincut/cactus/: balanced_cut_dfs.h  cactus_mincut.h  graph_modification.h  heavy_edges.h  most_balanced_minimum_cut.h  recursive_cactus.h
sce-solver/lib/algorithms/global_mincut/dynamic/: dynamic_mincut.h
sce-solver/lib/algorithms/misc/: core_decomposition.h  graph_algorithms.h  strongly_connected_components.h
sce-solver/lib/algorithms/multicut/: kernelization_criteria.h  maximum_flow.h  multicut_problem.h
sce-solver/lib/coarsening/: contract_graph.h  contraction_tests.h  label_propagation.h
sce-solver/lib/data_structure/: graph_access.h  mutable_graph.h
sce-solver/lib/data_structure/priority_queues/: fifo_node_bucket_pq.h
sce-solver/lib/io/: graph_io.h
sce-solver/lib/parallel/coarsening/: contract_graph.h  contraction_tests.h  label_propagation.h  sparsify.h
sce-solver/lib/parallel/data_structure/: union_find.h
sce-solver/lib/tools/: random_functions.h
sce-solver/src/: data_reduction.rs  forb_ind_subgraph.rs  graph.rs  graph_parser.rs  graph_trait.rs  heuristic.rs  ilp_solver.rs  lib.rs  main.rs  min_cut.rs  petgraph.rs  petgraph_hybrid.rs  search_tree_algo.rs
(+1312 files in other folders)
